--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
         "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
     },
     "dependencies": {
+        "ant-design-vue": "^4.0.7",
+        "mathjs": "^12.1.0",
         "vue": "^3.3.4"
     },
     "devDependencies": {
