--- a/client/package.json
+++ b/client/package.json
@@ -11,17 +11,16 @@
     },
     "dependencies": {
         "ant-design-vue": "^4.0.7",
+        "framer-motion": "^10.16.5",
         "mathjs": "^12.1.0",
         "vue": "^3.3.4"
     },
     "devDependencies": {
         "@tsconfig/node18": "^18.2.2",
         "@types/node": "^18.18.13",
-        "@vitejs/plugin-vue": "^4.4.0",
         "@vue/tsconfig": "^0.4.0",
         "npm-run-all2": "^6.1.1",
         "typescript": "~5.2.0",
-        "vite": "^4.4.11",
         "vue-tsc": "^1.8.19"
     }
 }
